--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* フォントに関する設定 */
 @font-face {
     font-family: cica-bold;
     src: url("../fonts/Cica-Bold.ttf") format("truetype");
@@ -8,6 +9,7 @@
     src: url("../fonts/Cica-Regular.ttf") format("truetype");
 }
 
+/* 見た目 */
 body {
     font-family: 'cica-regular';
 }
