--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,13 @@
 /* フォントに関する設定 */
+@import url("https://fonts.googleapis.com/earlyaccess/mplus1p.css");
 @font-face {
     font-family: cica-bold;
-    src: url("../fonts/Cica-Bold.ttf") format("truetype");
+    src: url("https://ei1711.github.io/fonts/Cica-Bold.ttf") format("truetype");
 }
 
 @font-face {
     font-family: cica-regular;
-    src: url("../fonts/Cica-Regular.ttf") format("truetype");
+    src: url("https://ei1711.github.io/fonts/Cica-Regular.ttf") format("truetype");
 }
 
 /* 見た目 */
