--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,50 @@
 /* フォントに関する設定 */
-@import url("https://fonts.googleapis.com/earlyaccess/mplus1p.css");
-/*
-@font-face {
-    font-family: cica-bold;
-    src: url("https://ei1711.github.io/fonts/Cica-Bold.ttf") format("truetype");
-}
-
 @font-face {
     font-family: cica-regular;
     src: url("https://ei1711.github.io/fonts/Cica-Regular.ttf") format("truetype");
 }
-*/
+
+@font-face {
+    font-family: mplus-1p-black;
+    src: url("https://ei1711.github.io/fonts/mplus-1p-black.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: mplus-1p-bold;
+    src: url("https://ei1711.github.io/fonts/mplus-1p-bold.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: mplus-1p-heavy;
+    src: url("https://ei1711.github.io/fonts/mplus-1p-heavy.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: mplus-1p-light;
+    src: url("https://ei1711.github.io/fonts/mplus-1p-light.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: mplus-1p-light;
+    src: url("https://ei1711.github.io/fonts/mplus-1p-light.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: mplus-1p-medium;
+    src: url("https://ei1711.github.io/fonts/mplus-1p-medium.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: mplus-1p-regular;
+    src: url("https://ei1711.github.io/fonts/mplus-1p-regular.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: mplus-1p-thin;
+    src: url("https://ei1711.github.io/fonts/mplus-1p-thin.ttf") format("truetype");
+}
 
 /* 見た目 */
 body {
-    /* font-family: 'cica-regular'; */
-    font-family: 'Mplus 1p';
+    font-family: 'mplus-1p-regular';
 }
